update setting for mac os x

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,15 +3,19 @@
   email = trongrg@gmail.com
 [alias]
   ci = commit
+  ca = commit --amend
   co = checkout
+  br = branch
   st = status --short
   lg = log --oneline --decorate -n 20
   wd = diff --word-diff
+  wdc = diff --word-diff --cached
   dc = diff --cached
-  wdc = diff --cached --word-diff
   pom = push origin master
-  po = push origin
-  ca = commit --amend
+  phm = push heroku master
+  ru = remote update
+  ruo = remote update origin
+  pim = push internal master
 [github]
   user = trongrg
 [color]
@@ -22,14 +26,14 @@
   added = green
   untracked = red
 [diff]
-  tool = kdiff3
-[difftool "kdiff3"]
-  cmd = kdiff3\"$LOCAL\" \"$REMOTE\"
-[mergetool "kdiff3"]
+  tool = diffmerge
+[difftool "diffmerge"]
+  cmd = diffmerge \"$LOCAL\" \"$REMOTE\"
+[mergetool "diffmerge"]
   trustexitcode = false
-  cmd = kdiff3 --merge --result=$MERGED $LOCAL $BASE $REMOTE
+  cmd = diffmerge --merge --result=$MERGED $LOCAL $BASE $REMOTE
 [merge]
-  tool = kdiff3
+  tool = diffmerge
 [mergetool]
   keepBackup = false
 [core]
